--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,28 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+:root {
+  --main-color: #f7f7f7;
+  --secondary-color: #ffffff;
+  --font-main-color: #1c1c1c;
+  --font-secondary-color: #ff4c33;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+[data-theme="dark"] {
+  --main-color: #121212;
+  --secondary-color: #090909;
+  --font-main-color: #efefef;
+  --font-secondary-color: #91e019;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+body {
+  background: linear-gradient(
+    to right,
+    var(--main-color) 70%,
+    var(--secondary-color) 30%
+  );
+  min-height: 100vh;
 }
