--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,24 @@ body {
   );
   min-height: 100vh;
 }
+
+@media (min-width: 992px) {
+  .container {
+    padding-right: 70px;
+    padding-left: 70px;
+  }
+}
+
+@media (max-width: 991px) {
+  .container {
+    padding-right: 40px;
+    padding-left: 40px;
+  }
+}
+
+@media (max-width: 767px) {
+  .container {
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+}
