--- a/src/Components/DarkModeButton/DarkModeButton.css
+++ b/src/Components/DarkModeButton/DarkModeButton.css
@@ -1,13 +1,8 @@
 .toggle-theme-wrapper {
-  text-align: right;
-  gap: 4px;
-  margin-bottom: 1rem;
 }
 
-.toggle-theme-wrapper span {
-  display: block;
+.toggle-theme-wrapper svg {
   font-size: 28px;
   cursor: pointer;
   color: var(--font-secondary-color);
-  margin: 10px;
 }
