--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -36,7 +36,7 @@
   max-width: 100%;
   margin-left: auto;
   object-fit: fill;
-  border-bottom-left-radius: 90px;
+  border-radius: 10px;
   filter: var(--image-filter);
 }
 
