--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -9,14 +9,12 @@
 }
 
 .navbar-brand {
-  transition: 0.1s;
   font-weight: bold;
 }
-
+.navbar-brand:focus,
 .navbar-brand:hover {
-  color: var(--font-main-color);
+  color: var(--font-secondary-color) !important;
 }
-
 .nav-link {
   color: var(--font-main-color);
   font-weight: 600;
